[project]
name = "langchain-rag-lesson"
version = "0.1.0"
description = "LangChain RAG lesson playground with Tongyi and GLM chat examples."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dashscope>=1.25.17",
    "httpx[socks]>=0.28.1",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.2",
    "langchain-openai>=1.2.1",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
]
